update - macro chat messages

--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -589,6 +589,8 @@
   "anima.ui.systemSettings.autoAcceptCombatRequests.hint.title": "En el combate autogestionado las peticiones de combate al DM se auto aceptarán dependiendo de si está activa esta opción",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.hint.title": "Cuando se use el combate autogestionado por el sistema, posibilidad de mostrar las tiradas que realice el GM vendrán marcadas por defecto según este valor",
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Mostrar tiradas del GM forma automática al combatir",
+  "anima.ui.systemSettings.sendChatMessagesByDefault.hint.title": "Cuando se necesite enviar un mensaje por el sistema, posibilidad de enviar los mensajes que realice el GM al chat vendrán marcadas por defecto según este valor",
+  "anima.ui.systemSettings.sendChatMessagesByDefault.title": "Mostrar mensajes del GM de forma automática en el chat",
   "anima.ui.systemSettings.useCombatTable.title": "Usar la Tabla de combate",
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calcular daño usando la Tabla de combate que aparece en el Core Exxet pg. 334-335",
   "anima.ui.systemSettings.useDistanceAutomation.title": "Automatizar distancia en el combate",
@@ -940,6 +942,7 @@
   "macros.damageCalculator.dialog.title": "Calculadora de daño",
   "macros.mysticCast.dialog.button.title": "Lanzar Conjuro",
   "macros.mysticCast.dialog.button.maintain.title": "Actualizar Mantenimientos",
+  "macros.mysticCast.dialog.message.maintain.title": "Actualizó Mantenimientos",
   "macros.mysticCast.dialog.casted.title": "Lanzados",
   "macros.mysticCast.dialog.maintain.title": "Mantenidos",
   "macros.mysticCast.dialog.title": "Conjuros",
@@ -957,11 +960,14 @@
   "macros.mysticAct.dialog.spareActConfirm.body.title": "Quieres hacer uso del ACT Excedente",
   "macros.mysticAct.dialog.spareActConfirm.title": "Aún te quedan {spareAct} de ACT",
   "macros.mysticAct.dialog.message.title": "Acumula <b>{act}</b> de Zeon",
+  "macros.mysticAct.dialog.message.preparedSpell.title": "Preparó el hechizo <b>{spell}</b> en grado <b>{grade}</b>",
+  "macros.mysticAct.dialog.message.preparingSpell.title": "Está preparando el hechizo <b>{spell}</b> en grado <b>{grade}</b>",
   "macros.mysticCast.dialog.message.title": "Lanzó <b>{spell}</b> - {grade}",
   "macros.psychicCast.dialog.button.title": "Lanzar Poder",
   "macros.psychicCast.dialog.casted.title": "Lanzados",
   "macros.psychicCast.dialog.maintain.title": "Innatos",
   "macros.psychicCast.dialog.button.maintain.title": "Actualizar Innatos",
+  "macros.psychicCast.dialog.message.maintain.title": "Actualizó Innatos",
   "macros.psychicCast.dialog.message.title": "Lanzó <b>{power}</b>",
   "macros.psychicCast.dialog.title": "Poderes Psíquicos",
   "macros.dialog.error.multipleSelectedToken.title": "Sólo puedes seleccionar un token",
