--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -550,6 +550,8 @@
   "anima.ui.tabs.psychic": "Psychic",
   "anima.ui.tabs.secondaries": "Secondaries",
   "anima.ui.titleSection.title": "Titles",
+  "anima.ui.togglePanel.open.title": "Open Panel",
+  "anima.ui.togglePanel.close.title": "Close Panel",
   "anima.ui.weapons.different.title": "Different / Unarmed",
   "anima.ui.weapons.known.title": "Known",
   "anima.ui.weapons.mixed.title": "Mixed",
@@ -731,7 +733,7 @@
   "macros.combat.dialog.distance.title": "Point blank",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, unarmed, to {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, {unarmed}, to {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
   "macros.combat.dialog.physicalDefense.resist.title": "Try to resist the attack from {target}",
@@ -759,9 +761,12 @@
   "macros.combat.dialog.spellGrade.base.title": "Base",
   "macros.combat.dialog.spellGrade.intermediate.title": "Intermediate",
   "macros.combat.dialog.spellGrade.title": "Spell grade",
+  "macros.combat.dialog.throw.title": "Throw",
+  "macros.combat.dialog.melee.title": "Melee",
   "macros.combat.dialog.total.title": "Total",
   "macros.combat.dialog.dobleDamage.title": "Shield takes double damage",
   "macros.combat.dialog.immuneToDamage.title": "Shield immune to damage type",
+  "macros.combat.dialog.unarmed.title": "Unarmed",
   "macros.combat.dialog.waitRequest.title": "Attack request sent. Waiting for DM response...",
   "macros.combat.dialog.waitingAttack.title": "Waiting for attacker...",
   "macros.combat.dialog.waitingDefense.title": "Waiting for defender...",
