--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -553,6 +553,8 @@
   "anima.ui.tabs.psychic": "Psíquico",
   "anima.ui.tabs.secondaries": "Secundarias",
   "anima.ui.titleSection.title": "Títulos",
+  "anima.ui.togglePanel.open.title": "Abrir Panel",
+  "anima.ui.togglePanel.close.title": "Cerrar Panel",
   "anima.ui.weapons.different.title": "Diferente / Desarmado",
   "anima.ui.weapons.known.title": "Conocida",
   "anima.ui.weapons.mixed.title": "Mixta",
@@ -662,7 +664,7 @@
   "macros.combat.dialog.combatMod.shieldParryProjectile.title": "Parar con escudo contra proyectil",
   "macros.combat.dialog.combatMod.parryThrow.title": "Parar contra lanzamiento",
   "macros.combat.dialog.combatMod.pointBlank.title": "Disparar a bocajarro",
-  "macros.combat.dialog.combatMod.highGround.title": "Terreno elevado",
+  "macros.combat.dialog.combatMod.highGround.title": "Posición superior",
   "macros.combat.dialog.combatMod.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.combatMod.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.combatMod.secondaryCritic.title": "Usar crítico secundario",
@@ -729,11 +731,11 @@
   "macros.combat.dialog.noRoll.title": "Sin tirar dado",
   "macros.combat.dialog.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.targetInCover.title": "Blanco en cobertura",
-  "macros.combat.dialog.highGround.title": "Terreno elevado",
+  "macros.combat.dialog.highGround.title": "Posición superior",
   "macros.combat.dialog.distance.title": "Bocajarro",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, desarmado, a {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, {unarmed}, a {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
   "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir el ataque de {target}",
@@ -761,9 +763,12 @@
   "macros.combat.dialog.spellGrade.base.title": "Base",
   "macros.combat.dialog.spellGrade.intermediate.title": "Intermedio",
   "macros.combat.dialog.spellGrade.title": "Grado del hechizo",
+  "macros.combat.dialog.throw.title": "Lanzar",
+  "macros.combat.dialog.melee.title": "Cuerpo a cuerpo",
   "macros.combat.dialog.total.title": "Total",
   "macros.combat.dialog.dobleDamage.title": "Escudo recibe el doble de daño",
   "macros.combat.dialog.immuneToDamage.title": "Escudo inmune al tipo de daño",
+  "macros.combat.dialog.unarmed.title": "Desarmado",
   "macros.combat.dialog.waitRequest.title": "Petición de ataque enviada. Esperando respuesta del GM...",
   "macros.combat.dialog.waitingAttack.title": "Esperando por el atacante...",
   "macros.combat.dialog.waitingDefense.title": "Esperando por el defensor...",
