--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -628,7 +628,7 @@
   "macros.combat.dialog.noRoll.title": "Sans lancer de dés",
   "macros.combat.dialog.notEnoughFatigue.title": "Vous n'avez pas assez de point de Fatigue à utiliser",
   "macros.combat.dialog.physicalAttack.title": "Essayez de toucher avec {weapon} la {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, sans arme, la {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, {unarmed}, la {target}",
   "macros.combat.dialog.physicalDefense.block.title": "Essayez de bloquer l'attaque de la {target}",
   "macros.combat.dialog.physicalDefense.dodge.title": "Essayez d'esquiver l'attaque de la {target}",
   "macros.combat.dialog.psychicAttack.title": "Focus envoie une charge de la {power} à la {target} avec un potentiel de {potential}",
@@ -648,6 +648,7 @@
   "macros.combat.dialog.spellGrade.intermediate.title": "Intermédiaire",
   "macros.combat.dialog.spellGrade.title": "Degré du sort",
   "macros.combat.dialog.total.title": "Total",
+  "macros.combat.dialog.unarmed.title": "Sans arme",
   "macros.combat.dialog.waitRequest.title": "Attaque envoyée. Attente de la réponse du MJ...",
   "macros.combat.dialog.waitingAttack.title": "Attente de l'attaquant...",
   "macros.combat.dialog.waitingDefense.title": "Attente du défenseur...",
