update - calculate distance in combat

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -730,7 +730,8 @@
   "macros.combat.dialog.poorVisibility.title": "Poor visibility",
   "macros.combat.dialog.targetInCover.title": "Target in Cover",
   "macros.combat.dialog.highGround.title": "High ground",
-  "macros.combat.dialog.distance.title": "Point blank",
+  "macros.combat.dialog.pointBlank.title": "Point blank",
+  "macros.combat.dialog.distance.title": "From a distance",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
   "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, {unarmed}, to {target}",
