--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -732,7 +732,8 @@
   "macros.combat.dialog.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.highGround.title": "Posición superior",
-  "macros.combat.dialog.distance.title": "Bocajarro",
+  "macros.combat.dialog.pointBlank.title": "Bocajarro",
+  "macros.combat.dialog.distance.title": "A distancia",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
   "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, {unarmed}, a {target}",
