--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -655,6 +655,8 @@
   "macros.combat.dialog.attacking.title": "Atacando a ",
   "macros.combat.dialog.blockButton.title": "Intentar bloquear",
   "macros.combat.dialog.blockValue.title": "Valor de bloqueo",
+  "macros.combat.dialog.button.defense.title": "Defender",
+  "macros.combat.dialog.button.attack.title": "Atacar",
   "macros.combat.dialog.cancelButton.title": "Cancelar",
   "macros.combat.dialog.combatMod.modifier.title": "Modificador",
   "macros.combat.dialog.combatMod.blindness.title": "Ceguera absoluta",
@@ -692,7 +694,7 @@
   "macros.combat.dialog.defenseButton.title": "Enviar defensa",
   "macros.combat.dialog.defenseCount.title": "Penalizador por defensa continua",
   "macros.combat.dialog.defenseSent.title": "Defensa enviada. Esperando a los resultados del combate...",
-  "macros.combat.dialog.defenseType.block.title": "Bloqueo",
+  "macros.combat.dialog.defenseType.block.title": "Parada",
   "macros.combat.dialog.defenseType.dodge.title": "Esquiva",
   "macros.combat.dialog.defenseType.title": "Tipo de defensa",
   "macros.combat.dialog.difference.title": "Diferencia de totales",
