update: rollToMessageFlavor in combat for success and failure rolls

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -720,8 +720,8 @@
   "macros.combat.dialog.gm.psychicPower.title": "Power",
   "macros.combat.dialog.gm.psychicPotential.title": "Potential",
   "macros.combat.dialog.gm.projection.title": "Projection",
-  "macros.combat.dialog.magicAttack.title": "Throw the spell {spell} to {target}",
-  "macros.combat.dialog.magicDefense.title": "Throw the spell {spell} to defend from {target}",
+  "macros.combat.dialog.magicAttack.title": "Throw the spell <b>{spell}</b> to {target}",
+  "macros.combat.dialog.magicDefense.title": "Throw the spell <b>{spell}</b> to defend from {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensive",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
@@ -735,13 +735,13 @@
   "macros.combat.dialog.pointBlank.title": "Point blank",
   "macros.combat.dialog.distance.title": "From a distance",
   "macros.combat.dialog.notEnoughFatigue.title": "Don't have enough fatigue points to use",
-  "macros.combat.dialog.physicalAttack.title": "Try to hit with {weapon} to {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, {unarmed}, to {target}",
-  "macros.combat.dialog.physicalDefense.block.title": "Try to block the attack from {target}",
-  "macros.combat.dialog.physicalDefense.dodge.title": "Try to dodge the attack from {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Try to resist the attack from {target}",
-  "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power {power} to {target} with {potential} potential",
-  "macros.combat.dialog.psychicDefense.title": "Defends with the mental power {power} from {target}",
+  "macros.combat.dialog.physicalAttack.title": "Try to hit with <b>{weapon}</b> to {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Try to hit, <b>Unarmed</b>, to {target}",
+  "macros.combat.dialog.physicalDefense.block.title": "Try to <b>Block</b> the attack from {target}",
+  "macros.combat.dialog.physicalDefense.dodge.title": "Try to <b>Dodge</b> the attack from {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Try to <b>Resist</b> the attack from {target}",
+  "macros.combat.dialog.psychicAttack.title": "Attacks with the mental power <b>{power}</b> to {target} with {potential} potential",
+  "macros.combat.dialog.psychicDefense.title": "Defends with the mental power <b>{power}</b> from {target}",
   "macros.combat.dialog.psychicPotential.title": "Psychic potential",
   "macros.combat.dialog.psychicPotentialFatigue.title": "Psychic potential fails loses {fatiguePen} Fatigue points",
   "macros.combat.dialog.psychicPower.title": "Psychic power",
