--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -722,8 +722,8 @@
   "macros.combat.dialog.gm.psychicPower.title": "Poder",
   "macros.combat.dialog.gm.psychicPotential.title": "Potencial",
   "macros.combat.dialog.gm.projection.title": "Proyección",
-  "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio {spell} a {target}",
-  "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio {spell} para defenderse del ataque de {target}",
+  "macros.combat.dialog.magicAttack.title": "Lanza su sortilegio <b>{spell}</b> a {target}",
+  "macros.combat.dialog.magicDefense.title": "Lanza el sortilegio <b>{spell}</b> para defenderse del ataque de {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Defensiva",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Ofensiva",
@@ -737,13 +737,13 @@
   "macros.combat.dialog.pointBlank.title": "Bocajarro",
   "macros.combat.dialog.distance.title": "A distancia",
   "macros.combat.dialog.notEnoughFatigue.title": "No tienes puntos de cansancio para usar",
-  "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su {weapon} a {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, {unarmed}, a {target}",
-  "macros.combat.dialog.physicalDefense.block.title": "Intenta bloquear el ataque {target}",
-  "macros.combat.dialog.physicalDefense.dodge.title": "Intenta esquivar el ataque {target}",
-  "macros.combat.dialog.physicalDefense.resist.title": "Intenta resistir el ataque de {target}",
-  "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental {power} a {target} con un potencial de {potential}",
-  "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental {power} de {target}",
+  "macros.combat.dialog.physicalAttack.title": "Intenta golpear con su <b>{weapon}</b> a {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Intenta golpear, <b>Desarmado</b>, a {target}",
+  "macros.combat.dialog.physicalDefense.block.title": "Intenta <b>Bloquear</b> el ataque {target}",
+  "macros.combat.dialog.physicalDefense.dodge.title": "Intenta <b>Esquivar</b> el ataque {target}",
+  "macros.combat.dialog.physicalDefense.resist.title": "Intenta <b>Resistir</b> el ataque de {target}",
+  "macros.combat.dialog.psychicAttack.title": "Ataca con el poder mental <b>{power}</b> a {target} con un potencial de {potential}",
+  "macros.combat.dialog.psychicDefense.title": "Se defiende con el poder mental <b>{power}</b> de {target}",
   "macros.combat.dialog.psychicPotential.title": "Potencial Psíquico",
   "macros.combat.dialog.psychicPotentialFatigue.title": "Falla potencial psíquico, pierde <b>{fatiguePen}</b> puntos de Fatiga",
   "macros.combat.dialog.psychicPower.title": "Poder psíquico",
