--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -617,8 +617,8 @@
   "macros.combat.dialog.error.yourSelf.title": "Vous ne pouvez pas vous attaquer vous-même !",
   "macros.combat.dialog.fatigue.title": "Points de Fatigue",
   "macros.combat.dialog.fatigueUsed.title": "Fatigue utilisée",
-  "macros.combat.dialog.magicAttack.title": "Lancer le sort {spell} sur {target}",
-  "macros.combat.dialog.magicDefense.title": "Lancer le sort {spell} pour se défendre de {target}",
+  "macros.combat.dialog.magicAttack.title": "Lancer le sort <b>{spell}</b> sur {target}",
+  "macros.combat.dialog.magicDefense.title": "Lancer le sort <b>{spell}</b> pour se défendre de {target}",
   "macros.combat.dialog.magicProjection.defensive.title": "Défensive",
   "macros.combat.dialog.magicProjection.normal.title": "Normal",
   "macros.combat.dialog.magicProjection.offensive.title": "Offensive",
@@ -627,12 +627,12 @@
   "macros.combat.dialog.modifier.title": "Modifier",
   "macros.combat.dialog.noRoll.title": "Sans lancer de dés",
   "macros.combat.dialog.notEnoughFatigue.title": "Vous n'avez pas assez de point de Fatigue à utiliser",
-  "macros.combat.dialog.physicalAttack.title": "Essayez de toucher avec {weapon} la {target}",
-  "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, {unarmed}, la {target}",
-  "macros.combat.dialog.physicalDefense.block.title": "Essayez de bloquer l'attaque de la {target}",
-  "macros.combat.dialog.physicalDefense.dodge.title": "Essayez d'esquiver l'attaque de la {target}",
-  "macros.combat.dialog.psychicAttack.title": "Focus envoie une charge de la {power} à la {target} avec un potentiel de {potential}",
-  "macros.combat.dialog.psychicDefense.title": "Focus de défense avec {power} de la {target}",
+  "macros.combat.dialog.physicalAttack.title": "Essayez de toucher avec <b>{weapon}</b> la {target}",
+  "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, <b>Sans arme</b>, la {target}",
+  "macros.combat.dialog.physicalDefense.block.title": "Essayez de <b>Bloquer</b> l'attaque de la {target}",
+  "macros.combat.dialog.physicalDefense.dodge.title": "Essayez d'<b>Esquiver</b> l'attaque de la {target}",
+  "macros.combat.dialog.psychicAttack.title": "Focus envoie une charge de la <b>{power}</b> à la {target} avec un potentiel de {potential}",
+  "macros.combat.dialog.psychicDefense.title": "Focus de défense avec <b>{power}</b> de la {target}",
   "macros.combat.dialog.psychicPotential.title": "Talent Psychique",
   "macros.combat.dialog.psychicPower.title": "Pouvoir Psychique",
   "macros.combat.dialog.psychicProjection.title": "Projection Psychique",
