Modify Seals, removing earth and adding Fire

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -166,7 +166,7 @@
   "anima.ui.domine.martialKnowledge.mk.title": "MK",
   "anima.ui.domine.martialKnowledge.title": "Martial Knowledge",
   "anima.ui.domine.nemesisSkills.title": "Nemesis Skills",
-  "anima.ui.domine.seals.earth.title": "Earth",
+  "anima.ui.domine.seals.fire.title": "Fire",
   "anima.ui.domine.seals.major.title": "Major",
   "anima.ui.domine.seals.metal.title": "Metal",
   "anima.ui.domine.seals.minor.title": "Minor",
