--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -166,7 +166,7 @@
   "anima.ui.domine.martialKnowledge.mk.title": "CM",
   "anima.ui.domine.martialKnowledge.title": "Conocimiento Marcial",
   "anima.ui.domine.nemesisSkills.title": "Habilidades de Némesis",
-  "anima.ui.domine.seals.earth.title": "Tierra",
+  "anima.ui.domine.seals.fire.title": "Fuego",
   "anima.ui.domine.seals.major.title": "Mayor",
   "anima.ui.domine.seals.metal.title": "Metal",
   "anima.ui.domine.seals.minor.title": "Menor",
