--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -162,7 +162,7 @@
   "anima.ui.domine.martialKnowledge.mk.title": "CM",
   "anima.ui.domine.martialKnowledge.title": "Connaissance Martiale",
   "anima.ui.domine.nemesisSkills.title": "Pouvoirs Némésis",
-  "anima.ui.domine.seals.earth.title": "Terre",
+  "anima.ui.domine.seals.fire.title": "Feu",
   "anima.ui.domine.seals.major.title": "Majeur",
   "anima.ui.domine.seals.metal.title": "Métal",
   "anima.ui.domine.seals.minor.title": "Mineur",
