Adding label component allowing to chose between icons or text

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -35,19 +35,35 @@
   "anima.ui.combat.ammo.title": "Ammo",
   "anima.ui.combat.armors.at.cold.base.title": "COL",
   "anima.ui.combat.armors.at.cold.title": "COL",
+  "anima.ui.combat.armors.at.cold.label": "COL",
+  "anima.ui.combat.armors.at.cold.tooltip": "COL",
   "anima.ui.combat.armors.at.cut.base.title": "CUT",
   "anima.ui.combat.armors.at.cut.title": "CUT",
+  "anima.ui.combat.armors.at.cut.label": "CUT",
+  "anima.ui.combat.armors.at.cut.tooltip": "CUT",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
+  "anima.ui.combat.armors.at.electricity.label": "ELE",
+  "anima.ui.combat.armors.at.electricity.tooltip": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE",
   "anima.ui.combat.armors.at.energy.title": "ENE",
+  "anima.ui.combat.armors.at.energy.label": "ENE",
+  "anima.ui.combat.armors.at.energy.tooltip": "ENE",
   "anima.ui.combat.armors.at.heat.base.title": "HEA",
   "anima.ui.combat.armors.at.heat.title": "HEA",
+  "anima.ui.combat.armors.at.heat.label": "HEA",
+  "anima.ui.combat.armors.at.heat.tooltip": "HEA",
   "anima.ui.combat.armors.at.impact.base.title": "IMP",
   "anima.ui.combat.armors.at.impact.title": "IMP",
-  "anima.ui.combat.armors.at.none.title": "-",
+  "anima.ui.combat.armors.at.impact.label": "IMP",
+  "anima.ui.combat.armors.at.impact.tooltip": "IMP",
   "anima.ui.combat.armors.at.thrust.base.title": "THR",
   "anima.ui.combat.armors.at.thrust.title": "THR",
+  "anima.ui.combat.armors.at.thrust.label": "THR",
+  "anima.ui.combat.armors.at.thrust.tooltip": "THR",
+  "anima.ui.combat.armors.at.none.label": "-",
+  "anima.ui.combat.armors.at.none.tooltip": "-",
+  "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.equipped.title": "Equipped?",
   "anima.ui.combat.armors.integrity.base.title": "Base integrity",
   "anima.ui.combat.armors.integrity.title": "Integrity",
@@ -542,6 +558,8 @@
   "anima.ui.systemSettings.defaultShieldMacro.hint.title": "If no Macros are found, it will take the name of the Macro that is entered here for supernatural shields",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Attack Failure Value for Animations",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "When executing a macro in combat, a failure argument is sent; if the HA value is less than the Failure value and the defender won the combat, it is considered that the attack failed (used in animations)",
+  "anima.ui.systemSettings.useIconLabels.title": "Use icons as labels",
+  "anima.ui.systemSettings.useIconLabels.hint.title": "Whether to use icons (default) or titles for labels inside dialogs and sheets.",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Damage Resistance",
   "anima.ui.tabs.domine": "Domine",
@@ -642,6 +660,8 @@
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Apply changes in actors such as fatigue points used or damage",
   "macros.combat.dialog.at.title": "AT",
   "macros.combat.dialog.attack.title": "Attack",
+  "macros.combat.dialog.attack.label": "AA",
+  "macros.combat.dialog.attack.tooltip": "Attack",
   "macros.combat.dialog.attackButton.title": "Send attack",
   "macros.combat.dialog.attackConfirm.body.title": "Do you want to attack {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirm attack",
