--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -35,19 +35,35 @@
   "anima.ui.combat.ammo.title": "Munición",
   "anima.ui.combat.armors.at.cold.base.title": "FRI base",
   "anima.ui.combat.armors.at.cold.title": "FRI",
+  "anima.ui.combat.armors.at.cold.label": "FRI",
+  "anima.ui.combat.armors.at.cold.tooltip": "FRI",
   "anima.ui.combat.armors.at.cut.base.title": "FIL base",
   "anima.ui.combat.armors.at.cut.title": "FIL",
+  "anima.ui.combat.armors.at.cut.label": "FIL",
+  "anima.ui.combat.armors.at.cut.tooltip": "FIL",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE base",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
+  "anima.ui.combat.armors.at.electricity.label": "ELE",
+  "anima.ui.combat.armors.at.electricity.tooltip": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE base",
   "anima.ui.combat.armors.at.energy.title": "ENE",
+  "anima.ui.combat.armors.at.energy.label": "ENE",
+  "anima.ui.combat.armors.at.energy.tooltip": "ENE",
   "anima.ui.combat.armors.at.heat.base.title": "CAL base",
   "anima.ui.combat.armors.at.heat.title": "CAL",
+  "anima.ui.combat.armors.at.heat.label": "CAL",
+  "anima.ui.combat.armors.at.heat.tooltip": "CAL",
   "anima.ui.combat.armors.at.impact.base.title": "CON base",
   "anima.ui.combat.armors.at.impact.title": "CON",
-  "anima.ui.combat.armors.at.none.title": "-",
+  "anima.ui.combat.armors.at.impact.label": "CON",
+  "anima.ui.combat.armors.at.impact.tooltip": "CON",
   "anima.ui.combat.armors.at.thrust.base.title": "PEN base",
   "anima.ui.combat.armors.at.thrust.title": "PEN",
+  "anima.ui.combat.armors.at.thrust.label": "PEN",
+  "anima.ui.combat.armors.at.thrust.tooltip": "PEN",
+  "anima.ui.combat.armors.at.none.title": "-",
+  "anima.ui.combat.armors.at.none.label": "-",
+  "anima.ui.combat.armors.at.none.tooltip": "-",
   "anima.ui.combat.armors.equipped.title": "¿Equipada?",
   "anima.ui.combat.armors.integrity.base.title": "Entereza base",
   "anima.ui.combat.armors.integrity.title": "Entereza",
@@ -545,6 +561,8 @@
   "anima.ui.systemSettings.defaultShieldMacro.hint.title": "En caso de no encontrar un Macro para el escudo sobrenatural tomará el nombre del Macro que se ingrese aquí",
   "anima.ui.systemSettings.missValueAttackMacro.title": "Valor de Fallo al Atacar para la Animación",
   "anima.ui.systemSettings.missValueAttackMacro.hint.title": "Al momento de ejecutar un macro en el combate se envía un argumento de fallo, si el valor de la HA es menor que el valor de Fallo y el defensor ganó el combate se considera que falló el ataque (se usa en animaciones)",
+  "anima.ui.systemSettings.useIconLabels.title": "Usar iconos como labels",
+  "anima.ui.systemSettings.useIconLabels.hint.title": "Indica si usar iconos (por defecto) o títulos como labels para ciertos campos en diálogos y fichas.",
   "anima.ui.tabs.combat": "Combate",
   "anima.ui.tabs.damageResistance": "Acumulación",
   "anima.ui.tabs.domine": "Domine",
@@ -642,6 +660,8 @@
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Aplicar cambios como los puntos de fatiga usados o el daño en las fichas de los personajes implicados",
   "macros.combat.dialog.at.title": "TA",
   "macros.combat.dialog.attack.title": "Ataque",
+  "macros.combat.dialog.attack.label": "HA",
+  "macros.combat.dialog.attack.tooltip": "Ataque",
   "macros.combat.dialog.attackButton.title": "Enviar ataque",
   "macros.combat.dialog.attackConfirm.body.title": "¿Quieres atacar a {target}?",
   "macros.combat.dialog.attackConfirm.title": "Confirmar ataque",
@@ -783,7 +803,7 @@
   "macros.combat.dialog.weapon.title": "Arma",
   "macros.combat.dialog.weaponAttack.title": "Ataque del arma",
   "macros.combat.dialog.weaponQuality.title": "Calidad del arma",
-  "macros.combat.dialog.weaponRow.attack.title": "{name} con ataque de {value}",
+  "macros.combat.dialog.weaponRow.ttack.title": "{name} con ataque de {value}",
   "macros.combat.dialog.weaponRow.defense.title": "{name} con defensa de {value}",
   "macros.combat.dialog.weaponUsed.title": "Arma",
   "macros.combat.dialog.winner.title": " gana esta ronda",
