--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -35,19 +35,35 @@
   "anima.ui.combat.ammo.title": "Munitions",
   "anima.ui.combat.armors.at.cold.base.title": "FRO",
   "anima.ui.combat.armors.at.cold.title": "FRO",
+  "anima.ui.combat.armors.at.cold.label": "FRO",
+  "anima.ui.combat.armors.at.cold.tooltip": "FRO",
   "anima.ui.combat.armors.at.cut.base.title": "TRA",
   "anima.ui.combat.armors.at.cut.title": "TRA",
+  "anima.ui.combat.armors.at.cut.label": "TRA",
+  "anima.ui.combat.armors.at.cut.tooltip": "TRA",
   "anima.ui.combat.armors.at.electricity.base.title": "ELE",
   "anima.ui.combat.armors.at.electricity.title": "ELE",
+  "anima.ui.combat.armors.at.electricity.label": "ELE",
+  "anima.ui.combat.armors.at.electricity.tooltip": "ELE",
   "anima.ui.combat.armors.at.energy.base.title": "ENE",
   "anima.ui.combat.armors.at.energy.title": "ENE",
+  "anima.ui.combat.armors.at.energy.label": "ENE",
+  "anima.ui.combat.armors.at.energy.tooltip": "ENE",
   "anima.ui.combat.armors.at.heat.base.title": "CHA",
   "anima.ui.combat.armors.at.heat.title": "CHA",
+  "anima.ui.combat.armors.at.heat.label": "CHA",
+  "anima.ui.combat.armors.at.heat.tooltip": "CHA",
   "anima.ui.combat.armors.at.impact.base.title": "CON",
   "anima.ui.combat.armors.at.impact.title": "CON",
-  "anima.ui.combat.armors.at.none.title": "-",
+  "anima.ui.combat.armors.at.impact.label": "CON",
+  "anima.ui.combat.armors.at.impact.tooltip": "CON",
   "anima.ui.combat.armors.at.thrust.base.title": "PER",
   "anima.ui.combat.armors.at.thrust.title": "PER",
+  "anima.ui.combat.armors.at.thrust.label": "PER",
+  "anima.ui.combat.armors.at.thrust.tooltip": "PER",
+  "anima.ui.combat.armors.at.none.label": "-",
+  "anima.ui.combat.armors.at.none.tooltip": "-",
+  "anima.ui.combat.armors.at.none.title": "-",
   "anima.ui.combat.armors.equipped.title": "Equipé?",
   "anima.ui.combat.armors.integrity.base.title": "Base Solidité",
   "anima.ui.combat.armors.integrity.title": "Solidité",
@@ -496,6 +512,8 @@
   "anima.ui.systemSettings.sendRollMessagesOnCombatByDefault.title": "Montrer les jets automatiquement au MJ dans un combat",
   "anima.ui.systemSettings.useCombatTable.title": "Utiliser la table de combat",
   "anima.ui.systemSettings.useCombatTable.hint.title": "Calculez les dégâts en utilisant la table de combat dans le Core Exxet pg. 334-335",
+  "anima.ui.systemSettings.useIconLabels.title": "Use icons as labels",
+  "anima.ui.systemSettings.useIconLabels.hint.title": "Whether to use icons (default) or titles for labels inside dialogs and sheets.",
   "anima.ui.tabs.combat": "Combat",
   "anima.ui.tabs.damageResistance": "Encaissement",
   "anima.ui.tabs.domine": "Domaine",
@@ -565,6 +583,8 @@
   "macros.combat.dialog.applyAndCloseButtonTooltip.title": "Appliquer les changements chez les acteurs, tels que les points de fatigue utilisés ou les dégâts sur les fiches de personnages concernés",
   "macros.combat.dialog.at.title": "IP",
   "macros.combat.dialog.attack.title": "Attaque",
+  "macros.combat.dialog.attack.label": "HA",
+  "macros.combat.dialog.attack.tooltip": "Attaque",
   "macros.combat.dialog.attackButton.title": "Envoyer l'attaque",
   "macros.combat.dialog.attackConfirm.body.title": "Voulez-vous attaquer {target}?",
   "macros.combat.dialog.attackConfirm.title": "Attaque confirmée",
