--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -654,6 +654,7 @@
   "dialogs.spellCasting.warning.innateMagic": "You don't have enough Innate Magic",
   "dialogs.spellCasting.warning.preparedSpell": "You do not have this Spell Prepared",
   "dialogs.spellCasting.warning.zeonAccumulated": "You don't have enough Accumulated Zeon",
+  "dialogs.spellCasting.warning.zeonPool": "You don't have enough Zeon in your Pool",
   "macros.combat.dialog.closeButton.title": "Close",
   "macros.combat.dialog.confirmButton.title": "Confirm",
   "macros.combat.dialog.applyAndCloseButton.title": "Apply and close",
