--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -603,7 +603,9 @@
   "macros.combat.dialog.counterAttackButton.title": "Contre-attaque",
   "macros.combat.dialog.counterAttackButtonTooltip.title": "Cette option déclenche une nouvelle attaque du défenseur",
   "macros.combat.dialog.critic.title": "Critique",
-  "macros.combat.dialog.damage.title": "Dégâts Modificateur",
+  "macros.combat.dialog.damage.title": "Dégâts",
+  "macros.combat.dialog.damage.tooltip": "Dégâts",
+  "macros.combat.dialog.damageModifier.title": "Dégâts Modificateur",
   "macros.combat.dialog.damageDeal.title": "Dégâts faits",
   "macros.combat.dialog.defend.title": "Défense",
   "macros.combat.dialog.defender.title": "Défenseur",
