IconBox renamed to IconRange for a more descriptive name

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -749,7 +749,8 @@
   "macros.combat.dialog.magicProjection.title": "Magic Projection",
   "macros.combat.dialog.modal.attack.title": "Attacking",
   "macros.combat.dialog.modifier.title": "Modifier",
-  "macros.combat.dialog.noRoll.title": "Without dice roll",
+  "macros.combat.dialog.withRoll.title": "With dice roll",
+  "macros.combat.dialog.withoutRoll.title": "Without dice roll",
   "macros.combat.dialog.poorVisibility.title": "Poor visibility",
   "macros.combat.dialog.targetInCover.title": "Target in Cover",
   "macros.combat.dialog.highGround.title": "High ground",
