--- a/src/lang/es.json
+++ b/src/lang/es.json
@@ -751,7 +751,8 @@
   "macros.combat.dialog.magicProjection.title": "Proyección mágica",
   "macros.combat.dialog.modal.attack.title": "Atacando",
   "macros.combat.dialog.modifier.title": "Modificador",
-  "macros.combat.dialog.noRoll.title": "Sin tirar dado",
+  "macros.combat.dialog.withRoll.title": "Tirar el dado",
+  "macros.combat.dialog.withoutRoll.title": "No tirar el dado",
   "macros.combat.dialog.poorVisibility.title": "Escasa visibilidad",
   "macros.combat.dialog.targetInCover.title": "Blanco en cobertura",
   "macros.combat.dialog.highGround.title": "Posición superior",
