--- a/src/lang/fr.json
+++ b/src/lang/fr.json
@@ -647,7 +647,8 @@
   "macros.combat.dialog.magicProjection.title": "Projection Magique",
   "macros.combat.dialog.modal.attack.title": "Attaquer",
   "macros.combat.dialog.modifier.title": "Modifier",
-  "macros.combat.dialog.noRoll.title": "Sans lancer de dés",
+  "macros.combat.dialog.withRoll.title": "Lancer de dés",
+  "macros.combat.dialog.withoutRoll.title": "Sans lancer de dés",
   "macros.combat.dialog.notEnoughFatigue.title": "Vous n'avez pas assez de point de Fatigue à utiliser",
   "macros.combat.dialog.physicalAttack.title": "Essayez de toucher avec <b>{weapon}</b> la {target}",
   "macros.combat.dialog.physicalAttack.unarmed.title": "Essayez de toucher, <b>Sans arme</b>, la {target}",
